<resources>
    <string name="gcm_sender_id">498796886377</string>

    <string name="app_name">Smart Shopper</string>
    <string name="comment">Comment</string>
    <string name="more">More</string>

    <string name="sales">Sales</string>
    <string name="news">New</string>
    <string name="shop">Shop</string>
    <string name="recent">Recent</string>
    <string name="cart">Cart</string>
    <string name="touched">Touched</string>
    <string name="touching">Touching</string>
    <string name="tried">Try</string>
    <string name="trying">Trying</string>
    <string name="buy">Buy</string>
    <string name="buying">Buying</string>
    <string name="removed">Removed</string>
    <string name="undo">UNDO</string>
    <string name="try_all">TRY ALL</string>
    <string name="cancel_try">CANCEL TRY</string>
    <string name="check_out">CHECKOUT</string>
    <string name="pay_now">PAY NOW</string>
    <string name="total">TOTAL</string>
    <string name="ready">Ready</string>
    <string name="sent">Sent</string>
    <string name="not_found">Not Found</string>
    <string name="please_wait">Please Wait...</string>
    <string name="processing_card_1">Were processing your credit card.</string>
    <string name="processing_card_2">This process may take a few seconds, so please be patient.</string>
    <string name="thank_you_1">Thank you</string>
    <string name="thank_you_2">for shopping with us!</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="button_buy">BUY</string>
    <string name="try_now">TRY NOW</string>
    <string name="title_activity_user_profile">CUSTOMER</string>

    <!-- Dialog -->
    <string name="connecting">Connecting...</string>
    <string name="title_alert_dialog">Alert Dialog</string>
    <string name="unsupport_play_service">This device does not supported google play service. Please install!</string>
    <string name="your_personal_assitant">YOUR PERSONAL ASSISTANT</string>
    <string name="ok">OK</string>
    <string name="update_status_product_in_cart">Staff has taken care of products in your cart</string>
</resources>
