<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context="com.shop.kissmartshop.activities.PaymentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_rectangle_white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical">
        <com.devspark.robototextview.widget.RobotoTextView
            app:typeface="roboto_light"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textColor="@color/pink"
            android:text="Select Your Card"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card_payment">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/ln_select_card">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_visa"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:id="@+id/iv_visa"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_maestro"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:id="@+id/iv_maestro"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_mastercard"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:id="@+id/iv_mastercard"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_american_express"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:id="@+id/iv_american_express"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/rl_processing_result">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/ln_processing_card">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_loading"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:text="@string/please_wait"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/processing_card_1"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/processing_card_2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:id="@+id/ln_result_processing_card">
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/thank_you_1"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thank_you_2"/>
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
