<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecentlyActivitiesActivity">


    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/action_bar_bottom"
        android:id="@+id/sv_product_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/slide_image_height">
                <android.support.v4.view.ViewPager
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/pager_product"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v4.view.ViewPager>

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/page_indicator_product"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_recently_activities"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@android:color/white"
                android:orientation="horizontal">
                <!-- Favourite -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/icon_action_width"
                        android:layout_height="@dimen/icon_action_height"
                        android:src="@drawable/ic_favourite"
                        android:scaleType="fitXY"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:text="43"/>
                </LinearLayout>

                <!-- Add cart -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/icon_action_width"
                        android:layout_height="@dimen/icon_action_height"
                        android:background="@drawable/ic_love"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:text="50"/>
                </LinearLayout>

                <!-- Comment -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/icon_action_width"
                        android:layout_height="@dimen/icon_action_height"
                        android:background="@drawable/ic_comment"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:text="@string/comment"/>
                </LinearLayout>

                <!-- More -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/icon_action_width"
                        android:layout_height="@dimen/icon_action_height"
                        android:background="@drawable/ic_more"/>
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:text="@string/more"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="25dp"
                    android:gravity="center_vertical"
                    android:id="@+id/title">
                    <com.devspark.robototextview.widget.RobotoTextView
                        app:typeface="roboto_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Recently Activities"
                        android:textSize="20sp"/>
                    <ImageView
                        android:layout_width="@dimen/icon_action_height"
                        android:layout_height="@dimen/icon_action_width"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_more_recently"/>
                </RelativeLayout>

                <!-- List Activities -->

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recycler_view_list_recently_activities" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!-- Bottom action bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_recently_activities"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@id/action_bar_bottom">
        <!-- Sales -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/icon_action_width"
                android:layout_height="@dimen/icon_action_height"
                android:src="@drawable/ic_sales"
                android:scaleType="fitXY"/>
            <com.devspark.robototextview.widget.RobotoTextView
                app:typeface="roboto_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/sales"/>
        </LinearLayout>

        <!-- New -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/icon_action_width"
                android:layout_height="@dimen/icon_action_height"
                android:src="@drawable/ic_favourite"
                android:scaleType="fitXY"/>
            <com.devspark.robototextview.widget.RobotoTextView
                app:typeface="roboto_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/news"/>
        </LinearLayout>

        <!-- Shop -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/icon_action_width"
                android:layout_height="@dimen/icon_action_height"
                android:src="@drawable/ic_shop"
                android:scaleType="fitXY"/>
            <com.devspark.robototextview.widget.RobotoTextView
                app:typeface="roboto_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/shop"/>
        </LinearLayout>

        <!-- Recent -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/icon_action_width"
                android:layout_height="@dimen/icon_action_height"
                android:src="@drawable/ic_recent"
                android:scaleType="fitXY"/>
            <com.devspark.robototextview.widget.RobotoTextView
                app:typeface="roboto_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/recent"/>
        </LinearLayout>

        <!-- Cart -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/icon_action_width"
                android:layout_height="@dimen/icon_action_height"
                android:src="@drawable/ic_cart_bottom_action"
                android:scaleType="fitXY"/>
            <com.devspark.robototextview.widget.RobotoTextView
                app:typeface="roboto_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/cart"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
