<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ln_product_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="@color/white">

            <android.support.v4.view.DirectionalViewPager
                android:id="@+id/view_pager_product"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/page_indicator_product"
                android:layout_marginRight="5dp"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@color/grey">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ln_product_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2.5"
                            android:layout_marginLeft="20dp"
                            android:lines="2"
                            android:ellipsize="end"
                            android:text="Concise Men's Athletic Shoes With Striped and Splicing Design"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="@color/pink"
                                android:text="$"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:textColor="@color/pink"
                                android:text="13.2"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingRight="10dp"
                            android:gravity="right"
                            android:textSize="15sp"
                            android:textColor="@color/grey"
                            android:text="$12.24"
                            android:id="@+id/tv_price_original"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:id="@+id/ln_product_colors">

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical"
                    android:background="@drawable/background_rectangle_white_stroke_black"
                    android:visibility="gone"
                    android:id="@+id/ln_size_color">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:id="@+id/ln_size_color_first">

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:id="@+id/ln_size_color_second">

                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@color/light_grey"
                        android:layout_weight="1"
                        android:paddingLeft="25dp"
                        android:orientation="horizontal"
                        android:id="@+id/ln_add_to_cart">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/add_to_cart"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="+"
                            android:id="@+id/tv_number_add_to_card"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@color/light_grey"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/pink"
                        android:textSize="18sp"
                        android:text="@string/button_buy"/>
                </LinearLayout>
                <FrameLayout
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_centerInParent="true">
                    <Button android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circle_stroke_white"
                        android:text="@string/try_now"/>
                </FrameLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_love"
        app:backgroundTint="@color/white"
        app:layout_anchor="@id/ln_product_image"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
